--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header h2 {
 .site-footer {
   background-image: linear-gradient(blue, black);
   color: white;
-
+  /* width: 100rem; */
 }
 
 .jumbotron {
@@ -38,10 +38,14 @@ header h2 {
   background-color: black;
 }
 
+
 .row-content {
-  padding: 50px 0;
-  border-bottom: 1px ridge;
+  padding: 20px;
+  /* border-bottom: 1px ridge; */
   min-height: 200px;
+}
+li {
+  padding: 5px;
 }
 
 a {
@@ -49,9 +53,9 @@ a {
   color: white;
 }
 
-#social {
-  padding: 10px;
 
+#social {
+  padding: 2px;
 }
 
 nav {
@@ -83,3 +87,4 @@ input {
 input:hover {
   box-shadow: 0px 0px 25px rgba(81, 203, 238, 1);
 }
+
