--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,12 @@ header h2 {
 .site-footer {
   background-image: linear-gradient(blue, black);
   color: white;
-  /* width: 100rem; */
 }
 
 .jumbotron {
-  margin: 0;
-  padding: 30px;
-  background-image: linear-gradient(to right, black, blue);
+  margin: 10px;
+  padding-top: 30px;
+  background-image: linear-gradient(96deg, rgba(0,0,0,1) 0%, blue 50%, rgba(0,0,0,1) 100%);
   color: white;
 }
 
@@ -70,14 +69,9 @@ nav {
 
 .carousel-caption {
   background-color: rgba(0, 0, 0, 0.5);
+  font-size: 14px;
 }
 
-#carouselButton {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  z-index: 100;
-}
 
 input {
   margin: 5px;
