--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 
 #logo {
   margin: 5px;
-
 }
 
 
@@ -15,7 +14,7 @@ h2 {
 
 #car {
   background-image: url(https://images.pexels.com/photos/4644812/pexels-photo-4644812.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
-  background-size: 100%;
+  background-size: cover;
 }
 
 header h2 {
@@ -39,12 +38,11 @@ header h2 {
   background-color: black;
 }
 
-
 .row-content {
   padding: 20px;
-  /* border-bottom: 1px ridge; */
   min-height: 200px;
 }
+
 li {
   padding: 5px;
 }
@@ -53,7 +51,6 @@ a {
   text-decoration: none;
   color: white;
 }
-
 
 #social {
   padding: 2px;
@@ -71,7 +68,6 @@ nav {
   background-color: rgba(0, 0, 0, 0.5);
   font-size: 14px;
 }
-
 
 input {
   margin: 5px;
@@ -91,3 +87,8 @@ input:hover {
 #gif {
   border-radius: 50px;
 }
+
+
+
+
+
