--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ header h2 {
 
 li {
   padding: 5px;
+  /* text-decoration:none; */
 }
 
 a {
@@ -116,3 +117,38 @@ color: white;
 
 
 
+.mfContainer{
+	border: 5px solid blue;
+	background: black;
+  padding: 5px;
+	box-shadow: 5px 10px 18px #888888;
+}
+
+label{
+font-size: 20px;
+color: white;
+}
+
+.itemfavcontent{
+
+	margin-bottom: 8px;
+    color: white;
+    border-radius: 8px;
+    padding: 6px;
+    /* text-decoration:none; */
+    height: 28px;
+    
+
+}
+.buttonn{
+	background: red;
+	float: right;
+	font-weight: bold;
+	width: 35px;
+	height: 30px;
+  color: white;
+}
+
+.myfavh {
+color: white;
+}
